# project_null

./: .gitattributes  .gitignore  CMakeLists.txt  DISCLAIMER.md  README.md  data.sqlite
data/: cards.json
data/notes/: cyb3r_gw3nt_rulebook.txt  mechanics.txt
data/shaders/: matrix_rain.fs
include/core/: combat_manager.h  factory.h  game_config.h  game_log.h  match_manager.h  types.h
include/core/components/: board.h  card.h  card_unit.h  deck.h  player.h
include/core/components/ability/: ability.h  ability_modifier.h  ability_spy.h  ability_strike.h  ability_summon.h
include/engine/: construction_state.h  deck_state.h  game_state.h  match_state.h  menu_state.h  start_state.h  state.h  state_manager.h
include/game/: board.h  card.h  card_effect.h  card_unit.h  deck.h  factory.h  game_config.h  player.h
include/game/components/: board.h  card.h  card_unit.h  deck.h  player.h  types.h
include/game/components/ability/: ability.h  ability_modifier.h  ability_spy.h  ability_strike.h  ability_summon.h  ability_weather.h  types.h
include/game/engine/: deck_state.h  game_state.h  menu_state.h  state.h  state_manager.h
include/visual/: layout_manager.h  render_config.h  renderer.h  texture_factory.h  ui_element.h  ui_types.h  ui_util.h  widget_manager.h
include/visual/managers/: card_manager.h  widget_manager.h  widget_manager_construction.h  widget_manager_game.h  widget_manager_match.h  widget_manager_menu.h
include/visual/scenes/: scene.h
include/visual/widgets/: widget.h  widget_board.h  widget_button.h  widget_card.h  widget_deck.h  widget_game_log.h  widget_graveyard.h  widget_hand.h  widget_player_info.h  widget_popup.h  widget_row.h  widget_special_row.h
include/visual/widgets/construction/: widget_card_pool.h  widget_deck_list.h  widget_full_card.h
include/visual/widgets/deck_builder/: widget_deck_grid.h  widget_full_card.h
include/visual/widgets/match/: widget_board.h  widget_card.h  widget_deck.h  widget_game_log.h  widget_graveyard.h  widget_hand.h  widget_player_info.h  widget_popup.h  widget_row.h  widget_special_row.h
src/: main.cpp
src/core/: board.cpp  card.cpp  card_effect.cpp  card_unit.cpp  combat_manager.cpp  deck.cpp  factory.cpp  match_manager.cpp  player.cpp  types.cpp
src/core/components/: board.cpp  card.cpp  card_unit.cpp  deck.cpp  player.cpp
src/core/components/abilities/: ability.cpp  ability_modifier.cpp  ability_spy.cpp  ability_strike.cpp  ability_summon.cpp  ability_weather.cpp
src/core/engine/: game_state.cpp  menu_state.cpp  state_manager.cpp
src/engine/: construction_state.cpp  deck_state.cpp  game_state.cpp  match_state.cpp  menu_state.cpp  start_state.cpp  state_manager.cpp
src/visual/: layout_manager.cpp  renderer.cpp  texture_factory.cpp  ui_element.cpp  ui_util.cpp  widget_manager.cpp
src/visual/managers/: card_manager.cpp  widget_manager_construction.cpp  widget_manager_game.cpp  widget_manager_match.cpp  widget_manager_menu.cpp
src/visual/widgets/: widget_board.cpp  widget_button.cpp  widget_card.cpp  widget_combat_log.cpp  widget_deck.cpp  widget_game_log.cpp  widget_graveyard.cpp  widget_hand.cpp  widget_player_info.cpp  widget_popup.cpp  widget_row.cpp  widget_special_row.cpp
src/visual/widgets/construction/: widget_card_pool.cpp  widget_deck_list.cpp  widget_full_card.cpp
src/visual/widgets/deck_builder/: widget_deck_grid.cpp  widget_full_card.cpp
src/visual/widgets/match/: widget_board.cpp  widget_card.cpp  widget_deck.cpp  widget_game_log.cpp  widget_graveyard.cpp  widget_hand.cpp  widget_player_info.cpp  widget_popup.cpp  widget_row.cpp  widget_special_row.cpp
tools/card_creator/: app.py  create.py  delete.py
